# opensearch_ocaml

./: .gitignore  README.md  dune-project  guide.txt  opensearch.opam
examples/bulk_upload/: README.md  bu.ml  dune
examples/search_engine/: README.md  dune  se.ml
examples/search_engine/static/: styles.css
lib/: bulk.ml  client.ml  config.ml  dune  duration.ml  param.ml  query.ml  req.ml  transport.ml
lib/api/: analyze.ml  cluster.ml  count.ml  document.ml  explain.ml  index.ml  ingest.ml  multi_search.ml  node.ml  profile.ml  raking_evaluation.ml  remote_cluster.ml  scripts.ml  scroll.ml  search.ml  search_templates.ml  snapshot.ml  task.ml
test/: document.ml  dune  index.ml  ingest.ml  node.ml  search.ml  search_templates.ml  task.ml
tools/: docker-compose.yml  proxy.sh
