(test
 (name index)
 (modules index)
 (libraries
  alcotest
  opensearch
  eio
  eio.mock
  eio_main
  logs.fmt
  tls-eio
  mirage-crypto-rng-eio
  fmt)
 (package opensearch)
 (preprocess
  (pps ppx_here)))

(test
 (name document)
 (modules document)
 (libraries
  alcotest
  opensearch
  eio
  eio.mock
  eio_main
  logs.fmt
  tls-eio
  mirage-crypto-rng-eio
  fmt)
 (package opensearch)
 (preprocess
  (pps ppx_here)))

(test
 (name search)
 (modules search)
 (libraries
  alcotest
  opensearch
  eio
  eio.mock
  eio_main
  logs.fmt
  tls-eio
  mirage-crypto-rng-eio
  fmt)
 (package opensearch)
 (preprocess
  (pps ppx_here)))

(test
 (name search_templates)
 (modules search_templates)
 (libraries
  alcotest
  opensearch
  eio
  eio.mock
  eio_main
  logs.fmt
  tls-eio
  mirage-crypto-rng-eio
  fmt)
 (package opensearch)
 (preprocess
  (pps ppx_here)))

(test
 (name ingest)
 (modules ingest)
 (libraries
  alcotest
  opensearch
  eio
  eio.mock
  eio_main
  logs.fmt
  tls-eio
  mirage-crypto-rng-eio
  fmt)
 (package opensearch)
 (preprocess
  (pps ppx_here)))
